--- a/video.html
+++ b/video.html
@@ -1,20 +1,29 @@
+
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>PuzzlesTV</title>
-        <link rel="stylesheet" type="text/css" href="main.css">
-  </head>
-  <body>
-    <div id="container">
-      <div id="kop"> <img src="images/logo.png" alt="PuzzlesTV logo" style="height:110px;">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+<div id="container">
+    <div id="kop"><img src="images/logo.png" alt="PuzzlesTV logo" style="height:110px;">
         <ul>
-          <a href="index.html">HOME</a>
-          <a href="over.html">OVER</a>
-          <a href="video.html">VIDEO'S</a>
-          <a href="contact.html">CONTACT</a>
-       </ul>
-      </div>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="over.html">Over</a></li>
+            <li><a href="video.html">Video's</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div id="sociaal">
+            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook"
+                                                                            aria-hidden="true"></i></a>
+            <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram"
+                                                                             aria-hidden="true"></i></a>
+        </div>
+    </div>
 
       <div id="inhoud">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/gsCxgKPOKUE" frameborder="0" allowfullscreen></iframe>
