--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 
     <div id="inhoud">
         <h1>Contact</h1>
-        <p style="font-family: Verdana;">Wat leuk dat je contact wilt opnemen met PuzzlesTV! Dit kan heel gemakkelijk,
-            je kunt het contactformulier hieronder invullen of een mailtje sturen naar:         info@puzzlestv.nl       
-            Je kunt ons ook volgen op Facebook, Instagram en YouTube!       </p>  
+        <p style="font-family: Verdana;">Wat leuk dat je contact wilt opnemen met PuzzlesTV!<br>Dit kan heel gemakkelijk,
+            je kunt het contactformulier hieronder invullen of een mailtje sturen naar:<br>info@puzzlestv.nl<br>   
+            Je kunt ons ook volgen op Facebook, Instagram en YouTube!</p>  
 
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4anfMz8xC9SseAi2xRJSHbSpLZ6gg1_jiG6yYj85Cjswf-g/viewform?embedded=true"
