added snow and changed instagram and youtube

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>PuzzlesTV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script type="text/javascript" src="snowstorm.js"></script>
 </head>
 <body>
 <div id="container">
@@ -18,9 +19,10 @@
         <div id="sociaal">
             <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook"
                                                                             aria-hidden="true"></i></a>
-            <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram"
                                                                              aria-hidden="true"></i></a>
+            <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+            
         </div>
     </div>
 
