--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     </div>
 
     <div id="inhoud">
-        <h1>Puzzles TV</h1>
-        <p>Welkom op de website van PuzzlesTV!</p>
+        <h1 style="font-family: Verdana">Puzzles TV</h1>
+        <p style="font-family: Verdana"> 
+            Welkom op de website van PuzzlesTV!
+            Op ons Youtubekanaal kun je onder andere filmpjes vinden bij Nederlandse filmpremières, cosplay events en
+            meer! </p>
+
         <a style="float: right;"
            href="http://partnerprogramma.bol.com/click/click?p=1&t=url&s=44098&url=http%3A//www.bol.com/nl/dvd/index.html&f=BAN&name=DVD algemeen"
            target="_blank">
@@ -39,13 +43,6 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9KxkzwGnauo" frameborder="0"
                 allowfullscreen></iframe>
-
-        <p style="font-family: Verdana"> HOME
-
-            Op ons Youtubekanaal kun je onder andere filmpjes vinden bij Nederlandse filmpremières, cosplay events en
-            meer! </p>
-
-        
 
 
     </div>
