christmas wish added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             Welkom op de website van PuzzlesTV!
             Op ons Youtubekanaal kun je onder andere filmpjes vinden bij Nederlandse filmpremières, cosplay events en
             meer! </p>
+        <p style="font-family: Verdana"> 
+            PuzzlesTV wenst jou een vrolijk kerstfeest en een gelukkig nieuwjaar! </p>
 
         <a style="float: right;"
            href="http://partnerprogramma.bol.com/click/click?p=1&t=url&s=44098&url=http%3A//www.bol.com/nl/dvd/index.html&f=BAN&name=DVD algemeen"
