--- a/over.html
+++ b/over.html
@@ -28,8 +28,8 @@
 
       <div id="inhoud">
 <img src="images/Microfoon.jpg" alt="Microfoon foto" style="height:110px;">
-
-      <p style="font-family: Verdana"> OVER PUZZLESTV
+      <h1 style="font-family: Verdana"> OVER PUZZLESTV </h1>
+      <p style="font-family: Verdana"> 
 
         <b> Wat is PuzzlesTV? </b>
         PuzzlesTV is een kanaal op YouTube. 
