--- a/over.html
+++ b/over.html
@@ -31,25 +31,24 @@
       <h1 style="font-family: Verdana"> OVER PUZZLESTV </h1>
       <p style="font-family: Verdana"> 
 
-        <b> Wat is PuzzlesTV? </b>
-        PuzzlesTV is een kanaal op YouTube. 
-        <b>Wie helpen er mee? </b>
-        Lisa de Graaf, presentatrice PuzzlesTV
-        Callum Stamp, co-presentator PuzzlesTV
-        Geert de Graaf, cameraman PuzzlesTV
-        Jos Hoekstra, cameraman en PuzzlesTV
-        <b> Hoe wordt PuzzlesTV gemaakt? </b>
-        Het logo is gemaakt door Isa Winkenius!
-        De website is gemaakt door Geert de Graaf.
-        Monteren doen wij met Adobe Premiere pro.
-
-        <b> En we gebruiken de volgende apparatuur: </b>
-        Onze hoofdcamera Canon XH A1
-        Onze andere camera is de Canon HF10
-        De reportermicrofoon is een Sennheiser MD46
-        En onze richtmicrofoon is een Rode NTG-2
-        <b> Waarom de naam PuzzlesTV? </b>
-        Yeah.. That’s the puzzle! ;)
+        <b> Wat is PuzzlesTV? </b> <br>
+        PuzzlesTV is een kanaal op YouTube. <br>
+        <b>Wie helpen er mee? </b> <br>
+        Lisa de Graaf, presentatrice PuzzlesTV <br>
+        Callum Stamp, co-presentator PuzzlesTV <br>
+        Geert de Graaf, cameraman PuzzlesTV <br>
+        Jos Hoekstra, cameraman en PuzzlesTV <br>
+        <b> Hoe wordt PuzzlesTV gemaakt? </b> <br>
+        Het logo is gemaakt door Isa Winkenius! <br>
+        De website is gemaakt door Geert de Graaf. <br>
+        Monteren doen wij met Adobe Premiere pro. <br>
+        <b> En we gebruiken de volgende apparatuur: </b> <br>
+        Onze hoofdcamera Canon XH A1 <br>
+        Onze andere camera is de Canon HF10 <br>
+        De reportermicrofoon is een Sennheiser MD46 <br>
+        En onze richtmicrofoon is een Rode NTG-2 <br>
+        <b> Waarom de naam PuzzlesTV? </b> <br>
+        Yeah.. That’s the puzzle! ;) <br>
  </p>
 
    
