--- a/video.html
+++ b/video.html
@@ -32,6 +32,11 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9KxkzwGnauo" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YJxrAW26o4Q" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/I6W3wwXCeo0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wmPd50Zmy50" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Rq5OuD14-OY" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tb3wso-2u0g" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5RHK7QV-yuI" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gFzHIbluOsk" frameborder="0" allowfullscreen></iframe>  
 
       <div id="onderbalk">Copyright: PuzzlesTV 2016</div>   
                                                                                                                                                                                                                                                                                                            
