--- a/over.html
+++ b/over.html
@@ -40,7 +40,7 @@
         Jos Hoekstra, cameraman en PuzzlesTV <br>
         <b> Hoe wordt PuzzlesTV gemaakt? </b> <br>
         Het logo is gemaakt door Isa Winkenius! <br>
-        De website is gemaakt door Geert de Graaf. <br>
+        De website is gemaakt door Lisa de Graaf. <br>
         Monteren doen wij met Adobe Premiere pro. <br>
         <b> En we gebruiken de volgende apparatuur: </b> <br>
         Onze hoofdcamera Canon XH A1 <br>
