--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="inhoud">
-        <h1 style="font-family: Verdana">Puzzles TV</h1>
+         <h1 style="font-family: Verdana"> PUZZLESTV </h1>
         <p style="font-family: Verdana"> 
             Welkom op de website van PuzzlesTV!
             Op ons Youtubekanaal kun je onder andere filmpjes vinden bij Nederlandse filmpremières, cosplay events en
