--- a/over.html
+++ b/over.html
@@ -29,27 +29,33 @@
       <div id="inhoud">
 <img src="images/Microfoon.jpg" alt="Microfoon foto" style="height:110px;">
       <h1 style="font-family: Verdana"> OVER PUZZLESTV </h1>
-      <p style="font-family: Verdana"> 
 
+      <p style="font-family: Verdana"> 
         <b> Wat is PuzzlesTV? </b> <br>
         PuzzlesTV is een kanaal op YouTube. <br>
+      </p> 
+      <p style="font-family: Verdana">     
         <b>Wie helpen er mee? </b> <br>
         Lisa de Graaf, presentatrice PuzzlesTV <br>
         Callum Stamp, co-presentator PuzzlesTV <br>
-        Geert de Graaf, cameraman PuzzlesTV <br>
-        Jos Hoekstra, cameraman en PuzzlesTV <br>
+        Geert de Graaf, cameraman en editor PuzzlesTV <br>
+        Jos Hoekstra, co-cameraman en co-editor PuzzlesTV <br>
+      </p>
         <b> Hoe wordt PuzzlesTV gemaakt? </b> <br>
         Het logo is gemaakt door Isa Winkenius! <br>
         De website is gemaakt door Lisa de Graaf. <br>
         Monteren doen wij met Adobe Premiere pro. <br>
+      <p style="font-family: Verdana">   
         <b> En we gebruiken de volgende apparatuur: </b> <br>
         Onze hoofdcamera Canon XH A1 <br>
         Onze andere camera is de Canon HF10 <br>
         De reportermicrofoon is een Sennheiser MD46 <br>
         En onze richtmicrofoon is een Rode NTG-2 <br>
+      </p>
+      <p style="font-family: Verdana">   
         <b> Waarom de naam PuzzlesTV? </b> <br>
         Yeah.. That’s the puzzle! ;) <br>
- </p>
+      </p>
 
    
       <div id="onderbalk">Copyright: PuzzlesTV 2016</div>   
