--- a/over.html
+++ b/over.html
@@ -41,10 +41,12 @@
         Geert de Graaf, cameraman en editor PuzzlesTV <br>
         Jos Hoekstra, co-cameraman en co-editor PuzzlesTV <br>
       </p>
+      <p style="font-family: Verdana">         
         <b> Hoe wordt PuzzlesTV gemaakt? </b> <br>
         Het logo is gemaakt door Isa Winkenius! <br>
         De website is gemaakt door Lisa de Graaf. <br>
         Monteren doen wij met Adobe Premiere pro. <br>
+      </p>
       <p style="font-family: Verdana">   
         <b> En we gebruiken de volgende apparatuur: </b> <br>
         Onze hoofdcamera Canon XH A1 <br>
