changed jpg to png

--- a/over.html
+++ b/over.html
@@ -27,7 +27,7 @@
     </div>
 
       <div id="inhoud">
-<img src="images/video.jpg" alt="Video foto" style="height:110px;">
+<img src="images/video.png" alt="Video foto" style="height:110px;">
       <h1 style="font-family: Verdana"> OVER PUZZLESTV </h1>
 
       <p style="font-family: Verdana"> 
