--- a/video.html
+++ b/video.html
@@ -27,6 +27,8 @@
     </div>
 
       <div id="inhoud">
+        <h1 style="font-family: Verdana">VIDEO'S VAN PUZZLESTV </h1>
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/gsCxgKPOKUE" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/i0f3H_dK9go" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9KxkzwGnauo" frameborder="0" allowfullscreen></iframe>
