--- a/over.html
+++ b/over.html
@@ -28,7 +28,7 @@
 
      <div id="inhoud">
       <h1 style="font-family: Verdana"> OVER PUZZLESTV </h1>
-      <img src="images/video.png" alt="Video foto" style="height:600px;">
+      <img src="images/video.png" alt="Video foto" style="height:500px; float: right;">
 
       <p style="font-family: Verdana"> 
         <b> Wat is PuzzlesTV? </b> <br>
