--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -9,36 +8,33 @@
 </head>
 <body>
 <div id="container">
+
     <div id="kop"><img src="images/logo.png" alt="PuzzlesTV logo" style="height:110px;">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="over.html">Over</a></li>
             <li><a href="video.html">Video's</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class='active'><a href="contact.html">Contact</a></li>
         </ul>
         <div id="sociaal">
-            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook"
-                                                                            aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram"
-                                                                             aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-           
         </div>
     </div>
 
-
     <div id="inhoud">
-         <h1 style="font-family: Verdana"> CONTACT MET PUZZLESTV </h1>
-     
+        <h1 style="font-family: Verdana"> CONTACT MET PUZZLESTV </h1>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4anfMz8xC9SseAi2xRJSHbSpLZ6gg1_jiG6yYj85Cjswf-g/viewform?embedded=true"
                 width="100%"
                 height="900"
                 marginheight="0"
                 marginwidth="0">Loading...
         </iframe>
-
-
     </div>
+	
     <div id="onderbalk">Copyright: PuzzlesTV 2016</div>
+	
+</div>
 </body>
 </html>
