--- a/video.html
+++ b/video.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -9,26 +8,23 @@
 </head>
 <body>
 <div id="container">
+
     <div id="kop"><img src="images/logo.png" alt="PuzzlesTV logo" style="height:110px;">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="over.html">Over</a></li>
             <li><a href="video.html">Video's</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class='active'><a href="contact.html">Contact</a></li>
         </ul>
         <div id="sociaal">
-            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook"
-                                                                            aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram"
-                                                                             aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-        
         </div>
     </div>
 
-      <div id="inhoud">
+    <div id="inhoud">
         <h1 style="font-family: Verdana">VIDEO'S VAN PUZZLESTV </h1>
-
         <iframe width="560" height="315" src="https://www.youtube.com/embed/gsCxgKPOKUE" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/i0f3H_dK9go" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9KxkzwGnauo" frameborder="0" allowfullscreen></iframe>
@@ -39,9 +35,10 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/tb3wso-2u0g" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/5RHK7QV-yuI" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/gFzHIbluOsk" frameborder="0" allowfullscreen></iframe>  
-
-      <div id="onderbalk">Copyright: PuzzlesTV 2016</div>   
-                                                                                                                                                                                                                                                                                                           
     </div>
-  </body>
+	
+    <div id="onderbalk">Copyright: PuzzlesTV 2016</div>
+	
+</div>
+</body>
 </html>
