--- a/over.html
+++ b/over.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -9,27 +8,24 @@
 </head>
 <body>
 <div id="container">
+
     <div id="kop"><img src="images/logo.png" alt="PuzzlesTV logo" style="height:110px;">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="over.html">Over</a></li>
+            <li class='active'><a href="over.html">Over</a></li>
             <li><a href="video.html">Video's</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div id="sociaal">
-            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook"
-                                                                            aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram"
-                                                                             aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-           
         </div>
     </div>
 
      <div id="inhoud">
       <h1 style="font-family: Verdana"> OVER PUZZLESTV </h1>
       <img src="images/video.png" alt="Video foto" style="height:500px; float: right;">
-
       <p style="font-family: Verdana"> 
         <b> Wat is PuzzlesTV? </b> <br>
         PuzzlesTV is een kanaal op YouTube. <br>
@@ -58,10 +54,11 @@
         <b> Waarom de naam PuzzlesTV? </b> <br>
         Yeah.. That’s the puzzle! ;) <br>
       </p>
-
-   
-      <div id="onderbalk">Copyright: PuzzlesTV 2016</div>   
-                                                                                                                                                                                                                                                                                                           
     </div>
-  </body>
+	
+    <div id="onderbalk">Copyright: PuzzlesTV 2016</div>
+	
+</div>
+</body>
 </html>
+
