--- a/video.html
+++ b/video.html
@@ -13,8 +13,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="over.html">Over</a></li>
-            <li><a href="video.html">Video's</a></li>
-            <li class='active'><a href="contact.html">Contact</a></li>
+            <li class='active'><a href="video.html">Video's</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <div id="sociaal">
             <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
