--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
     <title>PuzzlesTV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script type="text/javascript" src="snowstorm.js"></script>
 </head>
 <body>
 <div id="container">
+
     <div id="kop"><img src="images/logo.png" alt="PuzzlesTV logo" style="height:110px;">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class='active'><a href="index.html">Home</a></li>
             <li><a href="over.html">Over</a></li>
             <li><a href="video.html">Video's</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div id="sociaal">
-            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook"
-                                                                            aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram"
-                                                                             aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/puzzlestv" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/puzzlestv" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.youtube.com/puzzlestv" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-            
         </div>
     </div>
 
@@ -45,12 +42,10 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9KxkzwGnauo" frameborder="0"
                 allowfullscreen></iframe>
-
-
     </div>
-
-    <div id="onderbalk">&copy; PuzzlesTV 2016</div>
-
+	
+    <div id="onderbalk">Copyright: PuzzlesTV 2016</div>
+	
 </div>
 </body>
 </html>
