--- a/video.html
+++ b/video.html
@@ -5,6 +5,9 @@
     <title>PuzzlesTV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <meta name="theme-color" content="#1C75BC">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <div id="container">
