--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             PuzzlesTV wenst jou een vrolijk kerstfeest en een gelukkig nieuwjaar! </p>
 
         <a style="float: right;"
-           href="http://partnerprogramma.bol.com/click/click?p=1&t=url&s=44098&url=http%3A//www.bol.com/nl/dvd/index.html&f=BAN&name=DVD algemeen"
+           href="http://partnerprogramma.bol.com/click/click?p=1&t=url&s=44098&url=http%3A//www.bol.com/nl/dvd/index.html&f=BAN&name=DVD%20algemeen"
            target="_blank">
             <img src="http://www.bol.com/nl/upload/banners/film_141108_120x600.jpg" width="120" height="600"
                  alt="DVD algemeen"/>
